trunk/Archive2/4e/d4c79fea4bcd20/output
main.cpp:3:3: error: static_assert failed
  static_assert(S != 1);
  ^             ~~~~~~
main.cpp:13:18: note: in instantiation of template class 'array<1>' requested here
  array_u<Ts...> a1;
                 ^
1 error generated.
