trunk/Archive2/4e/d4c79fea4bcd20/main.cpp
template<int S>
struct array {
  static_assert(S != 1);
  void size() const;
};

template<typename... Ts>
using array_u = array<sizeof...(Ts)>;

template <typename ...Ts>
void foo()
{
  array_u<Ts...> a1;
}
